--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "note taking app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
+  "author": "jeff",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
-  }
+    "express": "^4.17.1",
+    "path": "^0.12.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JeffGrant274/Note-Taker.git"
+  },
+  "keywords": [
+    "notetaker"
+  ],
+  "bugs": {
+    "url": "https://github.com/JeffGrant274/Note-Taker/issues"
+  },
+  "homepage": "https://github.com/JeffGrant274/Note-Taker#readme"
 }
